# soli_lang

./: .dockerignore  .env.test  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FEATURE_SPECS.md  LICENSE  README.md  deploy.toml.sample  install.sh  package-lock.json  test_basic.sl  test_exceptions.sl  test_simple.sl
.cargo/: audit.toml
.github/workflows/: CLAUDE.md  ci.yml  publish-on-merge.yml  release.yml
.skills/: ci.md  doc.md  release.md  review.md
.soli/: context.json
.soli/conventions/: controller.json  liveview.json  middleware.json  routes.json  solidb.json  views.json
.soli/examples/: async_controller.sl  controller.sl  destructuring.sl  error_handling.sl  middleware.sl  modules.sl  rest_spread.sl  routes.sl
bench/soli-bench/: LEADERBOARD.md  README.md  grader.sh
benches/: collections_perf.rs  interpreter.rs  mode_comparison.rs  vm.rs
benches/programs/: array_concat.rb  array_iter.sl  array_ops.rb  array_ops.sl  array_ops.soli  class_ops.sl  fib_iterative.soli  fib_recursive.soli  hash_concat.rb  hash_ops.sl  inheritance_deep.sl  json_ops.sl  json_ops_large.sl  loop_sum.soli  method_call_hot.sl  native_method_hot.sl  pipeline_ops.sl  poly_call.sl  prop_read_hot.sl  range_iter.sl  string_concat.rb  string_method_bench.sl  string_methods.sl  string_ops.rb  string_ops.sl  string_ops_opt.rb
benches/ruby/: array_ops.rb  class_ops.rb  fib_iterative.rb  fib_recursive.rb  hash_ops.rb  inheritance_deep.rb  json_ops.rb  json_ops_large.rb  loop_sum.rb  pipeline_ops.rb  string_methods.rb  string_ops.rb
benchmarks/: bench_collections.rb  bench_collections.sl  bench_hash_methods.rb  bench_hash_methods.sl  bench_hash_methods_local.rb  bench_hash_methods_local.sl  bench_interpolation.rb  bench_interpolation.sl
codegraph/: Cargo.toml
codegraph/src/: lang.rs  lib.rs
config/: docs_structure.json
coverage/: breakdown.json  index.html
coverage/assets/: app.js  style.css
coverage/src/: app.sl.html  array_ops.sl.html  arrays.sl.html  arrays_builtin_spec.sl.html  arrays_spec.sl.html  auth.sl.html  bench_controller.sl.html  class_ops.sl.html  classes.sl.html  classes_spec.sl.html  clock_spec.sl.html  comprehensions.sl.html  comprehensions_spec.sl.html  control_flow_spec.sl.html  cors.sl.html  crypto_extended_spec.sl.html  crypto_spec.sl.html  date.sl.html  datetime_examples.sl.html  datetime_extended_spec.sl.html  datetime_spec.sl.html  debug_test.sl.html  default_params.sl.html  docs_controller.sl.html  dotenv_example.sl.html  duration_spec.sl.html  edge_cases_spec.sl.html  env_extended_spec.sl.html  env_spec.sl.html  error_handling_spec.sl.html  example.sl.html  factory_spec.sl.html  fib_iterative.sl.html  fib_recursive.sl.html  fibonacci.sl.html  file_spec.sl.html  (+67 more)
examples/: .env.example  arrays.sl  classes.sl  comprehensions.soli  datetime.sl  datetime.soli  datetime_examples.sl  debug_test.sl  default_params.sl  dotenv_example.sl  duration.sl  fibonacci.sl  fizzbuzz.sl  hash.sl  hash.soli  hello.soli  http_client.sl  http_client.soli  http_server.sl  interp_test.sl  iteration_methods.soli  json_test.soli  minimal_server.sl  model_example.soli  order_state_machine.sl  pattern_matching.sl  pipeline.sl  postfix_ternary.sl  simple_test.sl  soap_realworld.sol  soap_test.sol  solidb_bench.sl  solidb_example.sl  solidb_example.soli  spread_operator.sl  state_machine_example.sl  vm_disasm.rs
lsp/: actions.rs  completions.rs  format.rs  goto.rs  hover.rs  inlay.rs  mod.rs  rename.rs  semantic.rs
pdf/: Cargo.toml  README.md  THIRD_PARTY.md
pdf/benches/: render.rs
pdf/samples/: features_data.json  invoice_modern.json  letter.json  quote_data.json  report.json  report_data.json  statement.json  statement_data.json
pdf/src/: accessibility.rs  attachments.rs  barcode.rs  chart.rs  color.rs  data.rs  draw.rs  encrypt.rs  error.rs  forms.rs  geometry.rs  images.rs  interpolate.rs  invoice.rs  layout.rs  lib.rs  manipulate.rs  pdf_backend.rs  qr.rs  render.rs  sign.rs  stationery.rs  text.rs
pdf/src/facturx/: embed.rs  mod.rs  pdfa.rs  xmp.rs
pdf/src/fonts/: mod.rs  subset.rs
pdf/src/template/: cell.rs  mod.rs
pdf/tests/: box_and_nesting.rs  columns.rs  facturx_pipeline.rs  flow_features.rs  invoice_facturx.rs  nav_text.rs  new_elements.rs  parse_fixtures.rs  pdfa.rs  raw_pdf_features.rs  signatures.rs  table_spans.rs  table_stationery.rs  tagged.rs
pdf/tests/fixtures/: data.json  factur-x.xml  invoice.json  template.json
script/: release.sh
scripts/: bench.sh  cdp_drive.mjs  gen_pdf_feature_tour.py  gen_pdf_previews.sh  release.sh  verapdf-auto-install.xml  verapdf_samples.sl
src/: CLAUDE.md  bundle.rs  cleanup.rs  compiled_cache.rs  embedding.rs  generation.rs  inflect.rs  lib.rs  main.rs  metrics.rs  migration.rs  regex_cache.rs  repl.rs  repl_common.rs  repl_highlight.rs  repl_simple.rs  repl_tui.rs  scaffold.rs  solidb_http.rs  span.rs  virtual_fs.rs
template/: README.md  package.json  tailwind.config.js
template/wasm-worker/: Cargo.toml
template/wasm-worker/src/: lib.rs
tests/: CLAUDE.md  app_generator_test.rs  auth_generator_test.rs  browser_driver_test.rs  builtins_spec.sl  calculator_spec.sl  compiled_cache_test.rs  coverage_constructor_test.rs  describe_test.sl  describe_test.soli  desktop_db_test.rs  desktop_fetch_test.rs  differential_engines_test.rs  encrypted_bundle_test.rs  fmt_corpus_test.rs  language_spec.sl  lint_test.rs  live_component_test.rs  live_view_test.rs  lockfile_test.rs  mailer_generator_test.rs  mailer_spec.sl  metrics_spec.sl  migration_test.rs  module_resolver_test.rs  oidc_provider_generator_test.rs  package_test.rs  pdf_builtins.sl  scaffold_test.rs  serve_hooks_test.rs  server_e2e_test.rs  standalone_exe_test.rs  type_check_test.rs  type_checker_test.rs
tests_mvc_disabled/: crypto_extended_spec.sl  env_extended_spec.sl  i18n_spec.sl  jwt_spec.sl  model_spec.sl  query_builder_spec.sl  session_spec.sl  validation_extended_spec.sl
www/: README.md  app.infos  artillery-ws-throughput.yml  astro.config.mjs  package-lock.json  package.json  soli.toml  stdlib  tailwind.config.js
(+1342 files in other folders)
