[package]
name = "solilang"
version = "1.1.2"
edition = "2021"
description = "A dynamically-typed, class-based OOP language with optional type annotations and pipeline operators"
authors = ["Solilang Team"]
license = "MIT"
repository = "https://github.com/solisoft/soli_lang"

exclude = ["www"]

[[bin]]
name = "soli"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# Core language: embed the interpreter in a Rust application (no CLI/server).
embedding = []
# CLI binary + HTTP server (full toolchain).
cli = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-tungstenite",
    "dep:hyper",
    "dep:hyper-util",
    "dep:reqwest",
    "dep:ureq",
    "dep:mimalloc",
    "dep:daemonize",
    "dep:nix",
    "dep:ssh2",
    "dep:rusoto_s3",
    "dep:rusoto_core",
    "dep:rusoto_credential",
    "dep:ratatui",
    "dep:crossterm",
    "dep:gag",
    "dep:notify",
    "dep:tower-lsp",
    "dep:log",
    "dep:env_logger",
    "dep:async-channel",
    "dep:crossbeam",
    "dep:multer",
    "dep:tungstenite",
    "dep:hyper-tungstenite",
    "dep:futures-util",
    "dep:walkdir",
    "dep:flate2",
    "dep:tar",
    "dep:tempfile",
    "dep:dirs",
    "dep:calamine",
    "dep:csv",
    "dep:umya-spreadsheet",
    "dep:glob",
    "dep:sonic-rs",
]
# WASM target: minimal interpreter, no platform-specific deps.
wasm = ["embedding"]
sonic-rs = ["dep:sonic-rs"]

[dependencies]
thiserror = "1.0"
colored = "2.1"
# Directory paths (for repl config) — platform-specific
dirs = { version = "5.0", optional = true }

# Memory allocator — platform-specific (mimalloc)
mimalloc = { version = "0.1", default-features = false, optional = true }

# TUI support — platform-specific
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.28", optional = true }
gag = { version = "1.0", optional = true }

# Decimal type for financial calculations
rust_decimal = { version = "1.34", features = ["std", "serde"] }

# HTTP support — platform-specific
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "cookies", "multipart", "stream"], default-features = false, optional = true }
ureq = { version = "2.9", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = { version = "0.3", optional = true }
itoa = "1"
ryu = "1"

# High-performance async HTTP server — platform-specific
hyper = { version = "1.4", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"], optional = true }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "time", "process", "io-std", "io-util"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
hyper-tungstenite = { version = "0.15", optional = true }
bytes = "1.11.1"
uuid = { version = "1", features = ["v4", "serde"] }
tungstenite = { version = "0.24", optional = true }
lazy_static = "1.4"
lru = "0.12"
futures-util = { version = "0.3", optional = true }
crossbeam = { version = "0.8", optional = true }

# Cryptography
argon2 = { version = "0.5", features = ["std", "rand"] }
curve25519-dalek = "4"
rand_core = "0.6"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"

# Data encoding
base64 = "0.22"
rmp-serde = "1"

# Validation
regex = "1"
chrono = { version = "0.4", features = ["std"] }

# Request body parsing
multer = { version = "3", optional = true }

# JWT support
jsonwebtoken = "9"

# VAPID / Web Push (RFC 8291 / 8292): P-256 ECDH+ECDSA, HKDF, AES-128-GCM.
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
hkdf = "0.12"
aes-gcm = "0.10"

# LiveView support
diff = "0.1.13"
async-channel = { version = "2.3", optional = true }

# Daemonize (Unix only)
daemonize = { version = "0.5", optional = true }
nix = { version = "0.29", features = ["signal", "process"], optional = true }

# Used for Unix-only `O_NOFOLLOW` open flag in the file builtins (SEC-006a).
# Already a transitive dep via tokio/etc; promoting it to a direct dep so the
# constant is reachable without depending on a specific transitive's exports.
libc = "0.2"

# Ordered hash map with O(1) lookups
indexmap = "2"

# Fast, non-cryptographic hasher for IndexMap (3-5x faster than SipHash)
ahash = "0.8"

# File watching for hot reload
notify = { version = "7", optional = true }

# Test framework
walkdir = { version = "2", optional = true }
serde_yaml = "0.9"
rand = "0.8"
glob = { version = "0.3", optional = true }
urlencoding = "2"
url = "2"

# XML support for SOAP
quick-xml = { version = "0.36", features = ["serialize"] }

# Markdown rendering for .md views
pulldown-cmark = "0.12"

# HTML sanitizer — real html5ever-based parser for `sanitize_html`.
# SEC-024: replaces a prior substring-scanner that was bypassed by
# entity-encoded attributes, unquoted attributes, SVG sub-trees, etc.
ammonia = "4"

# S3 support
rusoto_s3 = { version = "0.48", optional = true }
rusoto_core = { version = "0.48", optional = true }
rusoto_credential = { version = "0.48", optional = true }

# Archive extraction for git archive
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }

# Image processing (pure Rust, no system deps)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "ico", "tiff", "webp"] }

# Spreadsheet support (CSV and Excel) — platform-specific (file I/O)
calamine = { version = "0.26", optional = true }
csv = { version = "1.3", optional = true }
umya-spreadsheet = { version = "1.0", optional = true }

# Pinned transitive dependency to fix RUSTSEC-2026-0009
time = ">=0.3.47"

# SSH support for deploy
ssh2 = { version = "0.9", optional = true }

# Language Server Protocol (used by `soli lsp`) — platform-specific
tower-lsp = { version = "0.20", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

# WASM target needs explicit getrandom backend (used by uuid, rand, etc.)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "collections_perf"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
