[package]
name = "solilang"
version = "1.20.0"
edition = "2021"
description = "A dynamically-typed, class-based OOP language with optional type annotations and pipeline operators"
authors = ["Solilang Team"]
license = "MIT"
repository = "https://github.com/solisoft/soli_lang"

# Exclude the docs-website runtime from the published crate, but keep
# www/docs/*.md so the scaffolder can bundle them into every new app.
exclude = [
    "www/.claude",
    "www/.env",
    "www/CLAUDE.md",
    "www/README.md",
    "www/app",
    "www/app.infos",
    "www/config",
    "www/db",
    "www/node_modules",
    "www/package-lock.json",
    "www/package.json",
    "www/public",
    "www/soli.toml",
    "www/stdlib",
    "www/tailwind.config.js",
    "www/tests",
]

[[bin]]
name = "soli"
path = "src/main.rs"

[features]
default = ["embedding", "llm"]
# Coverage is now always enabled at runtime via --coverage flag
full = ["embedding", "llm"]
embedding = []
# LLM text completion via an OpenAI-compatible chat/completions endpoint
# (src/generation.rs, exposed to Soli as the `llm_generate` builtin).
llm = []

[dependencies]
thiserror = "1.0"
colored = "2.1"
dirs = "5.0"

# Embed www/docs/*.md into the binary so `soli new` can copy them
# into every scaffolded app under docs/.
include_dir = "0.7"

# Memory allocator - much better RSS behavior than glibc for multi-threaded apps
mimalloc = { version = "0.1", default-features = false }

# Decimal type for financial calculations
rust_decimal = { version = "1.34", features = ["std", "serde"] }

# TUI support
ratatui = "0.26"
crossterm = "0.28"
gag = "1.0"

# HTTP support
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "cookies", "multipart", "stream"], default-features = false }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.3"
itoa = "1"
ryu = "1"

# High-performance async HTTP server. `server-auto` on hyper-util pulls in
# http2 so the same accept loop can auto-detect h1 vs h2c from the first
# bytes (HTTP/2 prior knowledge) — no separate port, no separate config.
hyper = { version = "1.4", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "time", "process", "io-std", "io-util"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
hyper-tungstenite = "0.15"
bytes = "1.11.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = "1"
nanoid = "0.4"
tungstenite = "0.24"
lazy_static = "1.4"
lru = "0.18"
futures-util = "0.3"
crossbeam = "0.8"

# Cryptography
argon2 = { version = "0.5", features = ["std", "rand"] }
curve25519-dalek = "4"
rand_core = "0.6"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"

# Arbitrary-precision integers for RSA-style modular exponentiation
# (Crypto.modexp). Pairs with the PKCS#1 v1.5 padding helpers and
# exclusive XML C14N to build XML-DSig / WS-Security signing in Soli.
num-bigint = "0.4"

# X.509 certificate parsing (X509.public_key) — extracts the RSA modulus /
# exponent from an IdP signing certificate for SAML signature verification.
x509-parser = "0.16"

# RSA private-key (PKCS#8 / PKCS#1 PEM) parsing for RsaKey.private_from_pem —
# extracts (n, d, e) so an SP can *sign* envelopes via Crypto.modexp. We use the
# lightweight RustCrypto ASN.1 crates (already in-tree via p256) rather than the
# `rsa` crate, which carries the unfixable Marvin-attack advisory RUSTSEC-2023-0071
# — we only parse key material, never run rsa's timing-sensitive sign/decrypt.
der = "0.7"
pkcs1 = "0.7"
pkcs8 = "0.10"

# Data encoding
base64 = "0.22"
rmp-serde = "1"
encoding_rs = "0.8"

# Validation
regex = "1"
chrono = { version = "0.4", features = ["std", "clock"] }

# Request body parsing
multer = "3"

# JWT support
jsonwebtoken = "9"

# VAPID / Web Push (RFC 8291 / 8292): P-256 ECDH+ECDSA, HKDF, AES-128-GCM.
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
hkdf = "0.12"
aes-gcm = "0.10"

# LiveView support
diff = "0.1.13"
async-channel = "2.3"

# Daemonize (Unix only)
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }

# Used for Unix-only `O_NOFOLLOW` open flag in the file builtins (SEC-006a).
# Already a transitive dep via tokio/etc; promoting it to a direct dep so the
# constant is reachable without depending on a specific transitive's exports.
libc = "0.2"

# Ordered hash map with O(1) lookups
indexmap = "2"

# Fast, non-cryptographic hasher for IndexMap (3-5x faster than SipHash)
ahash = "0.8"

# Cheap-clone string for Value::String: <=15 bytes inline (no heap alloc),
# longer strings Arc-backed with O(1) clone. Send+Sync.
ecow = { version = "0.2", features = ["serde"] }

# File watching for hot reload
notify = "8"

# Test framework
walkdir = "2"
serde_yaml = "0.9"
rand = "0.8"
glob = "0.3"
urlencoding = "2"
url = "2"

# XML support for SOAP
quick-xml = { version = "0.41", features = ["serialize"] }

# Markdown rendering for .md views
pulldown-cmark = "0.12"

# HTML sanitizer — real html5ever-based parser for `sanitize_html`.
# SEC-024: replaces a prior substring-scanner that was bypassed by
# entity-encoded attributes, unquoted attributes, SVG sub-trees, etc.
ammonia = "4"

# S3 support
rusoto_s3 = "0.48"
rusoto_core = "0.48"
rusoto_credential = "0.48"

# Archive extraction for git archive
flate2 = "1.0"
tar = "0.4"
tempfile = "3"

# Image processing (pure Rust, no system deps)
# Default features pull in AVIF (rav1e+ravif ~1.7MB) and EXR/HDR which Soli does not use.
# Enable only the formats referenced in src/interpreter/builtins/image.rs.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "ico", "tiff", "webp", "rayon"] }
# Lossy WebP encoding (libwebp). The `image` crate only encodes lossless WebP,
# which bloats photos; this gives quality-controlled lossy output for both the
# URL transform pipeline and the storage-time uploader transform.
webp = "0.3"

# Spreadsheet support (CSV and Excel).
# KNOWN RESIDUAL ADVISORY: calamine/umya-spreadsheet pull quick-xml <0.41
# transitively (even their latest releases — calamine 0.35 / umya 3.0 — resolve
# to quick-xml 0.37/0.39 as of Jul 2026), so the quick-xml DoS advisories
# RUSTSEC-2026-0194 / -0195 (>=0.41 required) CANNOT be cleared by bumping these
# yet. They are waived in `.cargo/audit.toml` as a narrow, documented exception
# (transitive-only, no upstream fix, DoS-only) — remove that waiver once upstream
# accepts quick-xml >=0.41. Scope: DoS only, reachable solely via
# `Spreadsheet.excel*` on an *untrusted* .xlsx/.ods — treat those inputs as
# trusted until upstream updates. The *direct* quick-xml dep (SOAP / SAML XML,
# the remotely-reachable surface) is already fixed on 0.41.
calamine = "0.26"
csv = "1.3"
umya-spreadsheet = "1.0"

# Pinned transitive dependency. Floor >=0.3.47 fixes RUSTSEC-2026-0009; ceiling
# <0.3.52 keeps `cookie` 0.18.1 building — time 0.3.52 changed `Parsable::parse`
# to a 2-arg signature that cookie still calls with one arg. lopdf 0.43 needs
# >=0.3.51, so the unified version resolves to exactly 0.3.51. Without the ceiling,
# an unlocked build (e.g. `cargo install` without `--locked`) grabs 0.3.52 and fails
# to compile cookie. Drop the ceiling once cookie ships a release built on time 0.3.52.
time = ">=0.3.47, <0.3.52"

# SSH support for deploy
ssh2 = "0.9"

# Language Server Protocol (used by `soli lsp`)
tower-lsp = "0.20"
log = "0.4"
env_logger = "0.11"
# POP3 email reading: sync rustls over std TcpStream + MIME parsing.
# `ring` provider matches the rest of the build (reqwest/jsonwebtoken use ring, not aws-lc-rs).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = "1"
webpki-roots = "1.0.7"
mail-parser = "0.11.3"
# Outbound email (Mailer): RFC 5322 / MIME message construction. The SMTP
# transport itself is hand-rolled over the sync rustls stream above (see
# builtins/mailer/smtp.rs), mirroring the POP3 client.
mail-builder = "0.4"

# JSON-template + Factur-X PDF generation (vendored crate, lives in pdf/).
soli-pdf = { path = "pdf" }
cms = { version = "0.2", features = ["std"] }
x509-cert = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
# Same version SolidB validates cron expressions with — lets the Cron.* helper
# tests assert their output actually parses, guarding against the 5-field
# regression that silently broke Cron.schedule.
cron = "0.15"

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "collections_perf"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
