[package]
name = "soli-wasm-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solilang = { path = "__SOLI_PATH__", default-features = false, features = ["wasm"] }

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js", "serde"] }
